<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Vecna</string>

  <string name="show_entry_title">View Password</string>
  <string name="show_entry_account">Account Name</string>
  <string name="show_entry_user">User ID</string>
  <string name="show_entry_password">Password</string>
  <string name="show_entry_show">Show</string>
  <string name="show_entry_hide">Hide</string>
  <string name="show_entry_copy">Copy</string>
  <string name="show_entry_close">Close</string>
  <string name="copied">Password for %s copied to clipboard.</string>

  <string name="settings_password">Password File</string>
  <string name="settings_password_long">File containing all of your passwords</string>
  <string name="settings_key_file">GPG Keyring File</string>
  <string name="settings_key_file_long">File containing secret keys for decryption</string>

  <string name="empty">No passwords found</string>
  <string name="settings">Configure file locations</string>
  <string name="locked">Tap to unlock passwords</string>
  <string name="prompt">Enter your passphrase:</string>

  <string name="error">Error</string>
  <string name="error_algorithm">Algorithm not implemented: %s</string>
  <string name="error_password_file_not_found">Password file not found</string>
  <string name="error_key_file_not_found">Key file not found</string>
  <string name="error_no_data_in_file">No encrypted data found in password file</string>
  <string name="error_secret_key_missing">No valid secret keys could be found for decryption</string>
  <string name="error_encryption">Password file was not encrypted correctly</string>
  <string name="error_parsing">Password file data is not in the correct format</string>
  <string name="error_pgp_key">Incorrect passphrase or PGP problem</string>
  <string name="error_unknown">Unknown error</string>

  <string name="progress_initial">Loading...</string>
  <string name="progress_keyfile">Opening GPG keyring</string>
  <string name="progress_passfile">Opening password file</string>
  <string name="progress_find_data">Finding encrypted data</string>
  <string name="progress_find_key">Extracting private key</string>
  <string name="progress_decrypt">Decrypting password file</string>
  <string name="progress_parse">Parsing password entries</string>

  <string name="menu_search">Search</string>
  <string name="menu_lock">Lock</string>
  <string name="menu_refresh">Reload</string>
  <string name="menu_settings">Settings</string>
  <string name="menu_help">Help</string>
</resources>
