<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:id="@+id/search"
    android:icon="@drawable/ic_menu_search"
    android:showAsAction="always|withText"
    android:title="@string/menu_search" />
  <item android:id="@+id/lock"
    android:icon="@drawable/ic_menu_lock"
    android:showAsAction="ifRoom|withText"
    android:title="@string/menu_lock" />
  <item android:id="@+id/refresh"
    android:icon="@drawable/ic_menu_refresh"
    android:showAsAction="ifRoom|withText"
    android:title="@string/menu_refresh" />
  <item android:id="@+id/settings"
    android:icon="@drawable/ic_menu_preferences"
    android:showAsAction="never"
    android:title="@string/menu_settings" />
  <item android:id="@+id/help"
    android:showAsAction="never"
    android:title="@string/menu_help" />
</menu>
